--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Horseracingclient"
         tools:targetApi="31">
+        <activity android:name=".controller.CashActivity"/>
+        <activity android:name=".controller.GamePlayActivity"/>
+        <activity android:name=".controller.HomeActivity"/>
+        <activity android:name=".controller.IntroductionActivity"/>
         <activity
-            android:name=".controller.MainActivity"
+            android:name=".controller.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
