--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity android:name=".controller.CashActivity"/>
         <activity android:name=".controller.GamePlayActivity"/>
         <activity android:name=".controller.HomeActivity"/>
-        <activity android:name=".controller.IntroductionActivity"/>
+        <activity android:name=".controller.TurtorialActivity"/>
         <activity
             android:name=".controller.LoginActivity"
             android:exported="true">
